# coworker

./: .env.example  .gitignore  BUGS.md  BUNDLED_TOOLS.md  README.md  RUST_INTEGRATION.md  electron-builder.json  entitlements.plist  index.html  package.json  tsconfig.app.json  types.d.ts  vite.config.ts  vitest.config.ts
assets/: logo-preview.html
native/: Cargo.toml
native/src/: git.rs  lib.rs  lib.rs.backup  lsp.rs  types.rs
scripts/: after-sign.cjs  build-mac-notarized.sh  download-binaries.sh  notarize.cjs  sign-binaries.cjs
src/electron/: ipc-handlers.ts  main.ts  pathResolver.ts  preload.cts  types.ts  util.ts
src/electron/libs/: config-store.ts  fd.ts  rg.ts  runner.ts  scout.ts  util.ts
src/electron/types/: settings.ts
src/test/: CodeEditor.test.tsx  DiffViewer.test.tsx  EditorTabs.test.tsx  EventCard.test.tsx  FileTree.test.tsx  GitPanel.test.tsx  Terminal.test.tsx  markdown.test.tsx  utils.test.ts
src/ui/: App.tsx  index.css  types.ts
src/ui/components/: CodeBlock.tsx  CommandPalette.tsx  CompactSidebar.tsx  DecisionPanel.tsx  DiffViewer.tsx  EditorTabs.tsx  EventCard.tsx  FileTree.tsx  GitPanel.tsx  Loading.tsx  OnboardingModal.tsx  PromptInput.tsx  ResizablePanel.tsx  SearchPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StartSessionModal.tsx  Terminal.tsx  Toast.tsx
src/ui/hooks/: useFd.ts  useIDE.ts  useIPC.ts  useKeyboardShortcuts.ts  useKeyboardShortcuts.tsx  useRg.ts  useScout.ts  useSessionPersistence.ts  useTheme.ts
src/ui/render/: markdown.tsx
src/ui/store/: useAppStore.ts  useToastStore.ts
src/ui/utils/: codeFormatter.ts  (+5 more)
